# cookiecutter-py

./: README.md  cookiecutter.json
{{cookiecutter.package_slug}}/: CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  VERSION  release_notes.rst  setup.cfg  tox.ini
{{cookiecutter.package_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.package_slug}}/docs/source/background/: index.rst
{{cookiecutter.package_slug}}/docs/source/getting_started/: index.rst
{{cookiecutter.package_slug}}/docs/source/howto/: index.rst
{{cookiecutter.package_slug}}/docs/source/reference/: index.rst
{{cookiecutter.package_slug}}/src/{{cookiecutter.module_name}}/: __init__.py
{{cookiecutter.package_slug}}/tests/unit/: test_package.py
