[metadata]
name = {{ cookiecutter.package_slug }}
version = file: VERSION

url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.package_slug }}
download_url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.package_slug }}.git
project_urls =
    GitHub = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.package_slug }}
    Issues = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.package_slug }}
    PyPI = https://pypi.org/{{ cookiecutter.pypi_username }}/{{ cookiecutter.package_slug }}

author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
maintainer = {{ cookiecutter.author }}
maintainer_email = {{ cookiecutter.author_email }}

description = {{ cookiecutter.description }}
long_description = file: README.rst
long_description_content_type = text/x-rst

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = True
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where=src

[options.extras_require]
doc =
    sphinx
    sphinx-autoapi
    sphinx-rtd-theme
test =
    coverage
    docutils
    pytest
    pytest-cov
    twine
